feat: add post put patch delete methods
